--- a/HTMLImage.html
+++ b/HTMLImage.html
@@ -5,10 +5,22 @@
     <meta charset="utf-8" />
     <title>Image</title>
     <link rel="icon" type="image/x-icon" href="Images/favicon.png">
+    <style>
+        nav.hover
+        {
+            background-color:blue;
+        }
+    </style>
 </head>
 <body>
     <a href ="https://www.google.com/" target="_blank"> 
         <img src="Images/Leaf.jpg" alt="Leaf Image" style="width:100px;height:100px">
     </a>
+    <nav>
+        Menu;
+        List;
+    </nav>
+    <a href="https://www.google.com/" target="_blank">Visit Google</a>
+    <p style="font-size:30px">&lt;,&gt;,&amp;&copy;Hi hello</p>
 </body>
 </html>
