--- a/HTMLImage.html
+++ b/HTMLImage.html
@@ -6,9 +6,20 @@
     <title>Image</title>
     <link rel="icon" type="image/x-icon" href="Images/favicon.png">
     <style>
-        nav.hover
+        a:hover, a:active
         {
             background-color:blue;
+        }
+        p:hover
+        {
+            background-color:red;
+            cursor:pointer;
+        }
+        ul{
+            list-style-type:none;
+            border:2px solid black;
+            border-width:10px;
+            
         }
     </style>
 </head>
@@ -16,10 +27,10 @@
     <a href ="https://www.google.com/" target="_blank"> 
         <img src="Images/Leaf.jpg" alt="Leaf Image" style="width:100px;height:100px">
     </a>
-    <nav>
-        Menu;
-        List;
-    </nav>
+    <ul>
+        <li>Menu</li>
+        <li>List</li>
+    </ul>
     <a href="https://www.google.com/" target="_blank">Visit Google</a>
     <p style="font-size:30px">&lt;,&gt;,&amp;&copy;Hi hello</p>
 </body>
