--- a/HTMLImage.html
+++ b/HTMLImage.html
@@ -21,6 +21,11 @@
             border-width:10px;
             
         }
+        #img-id{
+            background: url('Images/Leaf.jpg') no-repeat ;
+            height:200px;
+            width:200px
+        }
     </style>
 </head>
 <body>
@@ -33,5 +38,6 @@
     </ul>
     <a href="https://www.google.com/" target="_blank">Visit Google</a>
     <p style="font-size:30px">&lt;,&gt;,&amp;&copy;Hi hello</p>
+    <div id="img-id" alt="Leaf-Image"></div>
 </body>
 </html>
