--- a/IOTHNIC/Login.html
+++ b/IOTHNIC/Login.html
@@ -5,6 +5,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <nav>
+        <img src="/Images/IOTHNIC.png" alt="Logo" style="width:150px;height:150px">
+    </nav>
+    <div class="center">
+        <h1>Login</h1>
+        <form autocomplete="off">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" placeholder="Username">
+            <br>
+            <br>
+            <label for="password">Password:</label>
+            <input type="password" id="password" placeholder="Enter Password">
+            <br>
+            <br>
+            <input type="submit" value=" Login">
+            <br>
+            <br>
+            <div class="signup"
+        </form>
+    </div>
 </body>
 </html>
