--- a/IOTHNIC/Login.html
+++ b/IOTHNIC/Login.html
@@ -22,7 +22,7 @@
             <input type="submit" value=" Login">
             <br>
             <br>
-            <div class="signup"
+            <div class="signup"></div>
         </form>
     </div>
 </body>
