--- a/IOTHNIC/Login.html
+++ b/IOTHNIC/Login.html
@@ -5,24 +5,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <img src="/Images/IOTHNIC.png" alt="Logo" style="width:150px;height:150px">
-    </nav>
+    <header>
+
+        <nav>
+            <img src="/Images/IOTHNIC.png" alt="Logo" style="width: 150px; height: 102px;" >
+            <p style="text-align:center;font-weight:bolder;color:#2d1cd5">Information Of Thinigs Club</p>
+        </nav>
+    </header>
     <div class="center">
         <h1>Login</h1>
         <form autocomplete="off">
+            <div class="textfield" >
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" placeholder="Username">
+            <input type="text" id="username" name="username" placeholder="Username" required>
             <br>
             <br>
             <label for="password">Password:</label>
-            <input type="password" id="password" placeholder="Enter Password">
+            <input type="password" id="password" placeholder="Enter Password" required>
             <br>
             <br>
+            </div>
             <input type="submit" value=" Login">
             <br>
             <br>
-            <div class="signup"></div>
+            <div class="signup">
+                Not a Member? <a href="#">Signup</a>
+            </div>
         </form>
     </div>
 </body>
