--- a/IOTHNIC/Login.html
+++ b/IOTHNIC/Login.html
@@ -8,7 +8,7 @@
     <header>
 
         <nav>
-            <img src="/Images/IOTHNIC.png" alt="Logo" style="width: 150px; height: 102px;" >
+            <img src="Images/IOTHNIC.png" alt="Logo" style="width: 150px; height: 102px;" >
             <p style="text-align:center;font-weight:bolder;color:#2d1cd5">Information Of Thinigs Club</p>
         </nav>
     </header>
