--- a/IOTHNIC/Login.html
+++ b/IOTHNIC/Login.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <title>IOTHNIC Login Page</title>
     <link rel="icon" type="image/x-icon" href="Images/IOTHNIC.png">
     <link rel="stylesheet" href="style.css">
 </head>
