--- a/IOTHNIC/Login.html
+++ b/IOTHNIC/Login.html
@@ -9,8 +9,8 @@
     <header>
 
         <nav>
-            <img src="Images/IOTHNIC.png" alt="Logo" style="width: 150px; height: 102px;" >
-            <p style="text-align:center;font-weight:bolder;color:#2d1cd5">Information Of Thinigs Club</p>
+            <!--img src="Images/IOTHNIC.png" alt="Logo" style="width: 150px; height: 102px;" -->
+            <p style="text-align:center;font-weight:bolder;color:#ffffff;font-size:30px">Information Of Thinigs Club</p>
         </nav>
     </header>
     <div class="center">
