--- a/IOTHNIC/Login.html
+++ b/IOTHNIC/Login.html
@@ -29,7 +29,7 @@
             <input type="submit" value=" Login">
             <br>
             <br>
-            <div class="signup">
+            <div class="signup" style="text-align:center;">
                 Not a Member? <a href="#">Signup</a>
             </div>
         </form>
