--- a/IOTHNIC/Login.html
+++ b/IOTHNIC/Login.html
@@ -13,18 +13,19 @@
             <p style="text-align:center;font-weight:bolder;color:#ffffff;font-size:30px">Information Of Thinigs Club</p>
         </nav>
     </header>
+    <section>
     <div class="center">
         <h1>Login</h1>
         <form autocomplete="off">
-            <div class="textfield" >
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" placeholder="Username" required>
-            <br>
-            <br>
-            <label for="password">Password:</label>
-            <input type="password" id="password" placeholder="Enter Password" required>
-            <br>
-            <br>
+            <div class="textfield">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" placeholder="Username" required>
+                <br>
+                <br>
+                <label for="password">Password:</label>
+                <input type="password" id="password" placeholder="Enter Password" required>
+                <br>
+                <br>
             </div>
             <input type="submit" value=" Login">
             <br>
@@ -32,7 +33,9 @@
             <div class="signup" style="text-align:center;">
                 Not a Member? <a href="#">Signup</a>
             </div>
+            <footer style="text-align:center">VIT IOTHNIC Club &copy; 2023</footer>
         </form>
     </div>
+    </section>
 </body>
 </html>
