--- a/HTMLImage.html
+++ b/HTMLImage.html
@@ -8,7 +8,7 @@
     <style>
         a:hover, a:active
         {
-            background-color:blue;
+            text-decoration:underline;
         }
         p:hover
         {
@@ -36,7 +36,7 @@
         <li>Menu</li>
         <li>List</li>
     </ul>
-    <a href="https://www.google.com/" target="_blank">Visit Google</a>
+    <a href="https://www.google.com/" target="_blank" style="text-decoration:none">Visit Google</a>
     <p style="font-size:30px">&lt;,&gt;,&amp;&copy;Hi hello</p>
     <div id="img-id" alt="Leaf-Image"></div>
 </body>
