--- a/IOTHNIC/Login.html
+++ b/IOTHNIC/Login.html
@@ -19,11 +19,11 @@
         <form autocomplete="off">
             <div class="textfield">
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" placeholder="Username" required>
+                <input type="text" id="username" name="username" placeholder="Username" required >
                 <br>
                 <br>
                 <label for="password">Password:</label>
-                <input type="password" id="password" placeholder="Enter Password" required>
+                <input type="password" id="password" maxlength="8" placeholder="Enter Password" required >
                 <br>
                 <br>
             </div>
