--- a/HTMLImage.html
+++ b/HTMLImage.html
@@ -30,8 +30,7 @@
 </head>
 <body>
     <a href ="https://www.google.com/" target="_blank"> 
-        <img src="Images/Leaf.jpg" alt="Leaf Image" style="width:100px;height:100px">
-    </a>
+        <img src="Images/Leaf.jpg" alt="Leaf Image" style="width:100px;height:100px"> Open Google </a>
     <ul>
         <li>Menu</li>
         <li>List</li>
