--- a/IOTHNIC/Login.html
+++ b/IOTHNIC/Login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>IOTHNIC Login Page</title>
-    <link rel="icon" type="image/x-icon" href="Images/IOTHNIC.png">
+    <link rel="icon" type="image/x-icon" href="./Images/IOTHNIC.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
